[gd_scene load_steps=19 format=3 uid="uid://by86s1blrckri"]

[ext_resource type="Texture2D" uid="uid://ca4q0rwamvhg4" path="res://Assets/sprites/enemy-death/enemy-death-1.png" id="1_6ey02"]
[ext_resource type="Script" path="res://Scripts/Frog.gd" id="1_53sos"]
[ext_resource type="Texture2D" uid="uid://c8gk5d47wl7n0" path="res://Assets/sprites/enemy-death/enemy-death-2.png" id="2_gsiwg"]
[ext_resource type="Texture2D" uid="uid://bqkngmiv3733l" path="res://Assets/sprites/frog/jump/frog-jump-2.png" id="2_mydh4"]
[ext_resource type="Texture2D" uid="uid://i7rl64kimr1s" path="res://Assets/sprites/frog/idle/frog-idle-1.png" id="3_5eo4f"]
[ext_resource type="Texture2D" uid="uid://ri3n5bb7ojp5" path="res://Assets/sprites/enemy-death/enemy-death-3.png" id="3_q1d73"]
[ext_resource type="Texture2D" uid="uid://ctya4xfpv7ntj" path="res://Assets/sprites/frog/idle/frog-idle-2.png" id="4_lg8d0"]
[ext_resource type="Texture2D" uid="uid://bii13cphiilch" path="res://Assets/sprites/enemy-death/enemy-death-4.png" id="4_lvens"]
[ext_resource type="Texture2D" uid="uid://dlvbmiwrb2frm" path="res://Assets/sprites/enemy-death/enemy-death-5.png" id="5_6sx2q"]
[ext_resource type="Texture2D" uid="uid://c4722pd34jtld" path="res://Assets/sprites/frog/idle/frog-idle-3.png" id="5_502x3"]
[ext_resource type="Texture2D" uid="uid://bdcingiwxd1xd" path="res://Assets/sprites/enemy-death/enemy-death-6.png" id="6_einf2"]
[ext_resource type="Texture2D" uid="uid://2lwn8vs5wcug" path="res://Assets/sprites/frog/idle/frog-idle-4.png" id="6_oj3ns"]
[ext_resource type="Texture2D" uid="uid://brf82hvhtb0lo" path="res://Assets/sprites/frog/jump/frog-jump-1.png" id="7_k5giu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tv2so"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6ey02")
}, {
"duration": 1.0,
"texture": ExtResource("2_gsiwg")
}, {
"duration": 1.0,
"texture": ExtResource("3_q1d73")
}, {
"duration": 1.0,
"texture": ExtResource("4_lvens")
}, {
"duration": 1.0,
"texture": ExtResource("5_6sx2q")
}, {
"duration": 1.0,
"texture": ExtResource("6_einf2")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mydh4")
}],
"loop": true,
"name": &"fall",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5eo4f")
}, {
"duration": 1.0,
"texture": ExtResource("4_lg8d0")
}, {
"duration": 1.0,
"texture": ExtResource("5_502x3")
}, {
"duration": 1.0,
"texture": ExtResource("6_oj3ns")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_k5giu")
}],
"loop": true,
"name": &"jump",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjtbw"]
size = Vector2(19, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_etxae"]
radius = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ej46e"]
size = Vector2(23, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48jqp"]
size = Vector2(29, 11)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_53sos")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.25, 0)
scale = Vector2(0.984848, 1)
sprite_frames = SubResource("SpriteFrames_tv2so")
animation = &"idle"

[node name="DeathArea" type="Area2D" parent="."]
position = Vector2(0, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_tjtbw")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_etxae")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 2.5)
shape = SubResource("RectangleShape2D_ej46e")

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(-0.5, 6.5)
shape = SubResource("RectangleShape2D_48jqp")

[connection signal="body_entered" from="DeathArea" to="." method="_on_death_area_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
